--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "google-fonts": "^1.0.0"
     }
 }
